docs/apache-airflow-providers-apache-hive/9.0.2/_sources/_api/airflow/providers/apache/hive/sensors/named_hive_partition/index.rst.txt
airflow.providers.apache.hive.sensors.named_hive_partition
==========================================================

.. py:module:: airflow.providers.apache.hive.sensors.named_hive_partition


Classes
-------

.. autoapisummary::

   airflow.providers.apache.hive.sensors.named_hive_partition.NamedHivePartitionSensor


Module Contents
---------------

.. py:class:: NamedHivePartitionSensor(*, partition_names, metastore_conn_id = 'metastore_default', poke_interval = 60 * 3, hook = None, **kwargs)

   Bases: :py:obj:`airflow.sensors.base.BaseSensorOperator`


   Waits for a set of partitions to show up in Hive.

   :param partition_names: List of fully qualified names of the
       partitions to wait for. A fully qualified name is of the
       form ``schema.table/pk1=pv1/pk2=pv2``, for example,
       default.users/ds=2016-01-01. This is passed as is to the metastore
       Thrift client ``get_partitions_by_name`` method. Note that
       you cannot use logical or comparison operators as in
       HivePartitionSensor.
   :param metastore_conn_id: Reference to the
       :ref:`metastore thrift service connection id <howto/connection:hive_metastore>`.


   .. py:attribute:: template_fields
      :type:  collections.abc.Sequence[str]
      :value: ('partition_names',)



   .. py:attribute:: ui_color
      :value: '#8d99ae'



   .. py:attribute:: next_index_to_poke
      :value: 0



   .. py:attribute:: metastore_conn_id
      :value: 'metastore_default'



   .. py:attribute:: partition_names


   .. py:attribute:: hook
      :value: None



   .. py:method:: parse_partition_name(partition)
      :staticmethod:


      Get schema, table, and partition info.



   .. py:method:: poke_partition(partition)

      Check for a named partition.



   .. py:method:: poke(context)

      Override when deriving this class.



